sampleyaml/collections_uat_fservice.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: collectionuat
    name: uatcollfservice
spec:
   selector:
       app: fuat
   type: NodePort
   ports:
      - port: 80
        protocol: TCP
        targetPort: 80
