sampleyaml/collections_uat_svc.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: collectionuat
    name: uatcollapisvc
spec:
   selector:
       app: uat
   type: NodePort
   ports:
      - port: 8080
        protocol: TCP
        targetPort: 8080
