sampleyaml/collections_uat_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
  name: collectionsuat-api-ingress
  namespace: collectionuat
spec:
  rules:
  - host: req-api.domain.io
    http:
      paths:
      - backend:
          service:
            name: uatcollapisvc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  - host: req.domain.io
    http:
      paths:
      - backend:
          service:
            name: uatcollfservice
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - req-api.domain.io
    - req.domain.io
    secretName: <the secret name which we created>
